objects/GEMS_Account_Structure_Response__c.object
<CustomObject>
    <fields>
        <fullName>AccStructCaseId__c</fullName>
        <label>AccStructCaseId</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_1_response_txt__c</fullName>
        <label>Call 1 response txt</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_1_status__c</fullName>
        <label>Call 1 status</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_2_response_txt__c</fullName>
        <label>Call 2 response txt</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_2_status__c</fullName>
        <label>Call 2 status</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_3_response_txt__c</fullName>
        <label>Call 3 response txt</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_3_status__c</fullName>
        <label>Call 3 status</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_time__c</fullName>
        <description>Time when first retrieve request was made to BlueSTAR</description>
        <label>Request time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_time__c</fullName>
        <description>Time when last account structure details are received from BlueSTAR</description>
        <label>Response time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Should_delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to mark a record for deletion</description>
        <label>Should delete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>GEMS Account Structure Response</label>
    <listViews>
        <fullName>All_responses</fullName>
        <columns>AccStructCaseId__c</columns>
        <columns>Call_1_status__c</columns>
        <columns>Call_2_status__c</columns>
        <columns>Call_3_status__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Call_1_response_txt__c</columns>
        <columns>Call_2_response_txt__c</columns>
        <columns>Call_3_response_txt__c</columns>
        <columns>Should_delete__c</columns>
        <columns>Transaction_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All responses</label>
    </listViews>
    <nameField>
        <label>GEMS Account Structure Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMS Account Structure Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>